--- a/css/style.css
+++ b/css/style.css
@@ -236,6 +236,7 @@ button{
   display: flex;
   justify-content: flex-end;
   padding-top: 46px;
+  height: 72px;
 }
 .title{
   color: #ee3643;
@@ -372,16 +373,16 @@ button{
   position: absolute;
   margin: 14px 10px 14px 269px;
 }
-.username-block:hover > .icon-user{
+.username-block a .icon-user:hover {
   background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='utf-8'%3F%3E%3C!-- Generator: Adobe Illustrator 15.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0) --%3E%3C!DOCTYPE svg PUBLIC '-//W3C//DTD SVG 1.1//EN' 'http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd'%3E%3Csvg version='1.1' id='Layer_2' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' width='20px' height='18px' viewBox='0 0 20 18' enable-background='new 0 0 20 18' xml:space='preserve'%3E%3Cpath fill='%2332425C' d='M17.881,14.166c-2.144-0.735-4.256-1.666-5.207-2.39c-0.657-0.501-0.77-1.618-0.517-2.415 c1.118-0.903,1.864-2.477,1.864-4.278C14.021,2.276,12.221,0,10,0S5.979,2.276,5.979,5.083c0,1.801,0.746,3.374,1.863,4.277 c0.253,0.798,0.141,1.915-0.517,2.416c-0.95,0.724-3.063,1.654-5.207,2.39S0,18,0,18h20C20,18,20.025,14.901,17.881,14.166z'/%3E%3C/svg%3E%0A");
 }
-.username-block:hover > .icon-logout{
+.username-block a .icon-logout:hover{
   background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='utf-8'%3F%3E%3C!-- Generator: Adobe Illustrator 15.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0) --%3E%3C!DOCTYPE svg PUBLIC '-//W3C//DTD SVG 1.1//EN' 'http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd'%3E%3Csvg version='1.1' id='Layer_1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' width='21px' height='17px' viewBox='0 0 21 17' enable-background='new 0 0 21 17' xml:space='preserve'%3E%3Cg%3E%3Cpolygon fill='%2332425C' points='21,8.5 12.125,0 12.125,6 6.125,6 6.125,11 12.125,11 12.125,17 '/%3E%3Cpath fill='%2332425C' d='M3.106,13.952V3.048c0.018-0.376,0.171-1.057,1.01-1.057h5.027V0H4.116C1.938,0,1.112,1.81,1.087,3.027 v10.946C1.112,15.189,1.938,17,4.116,17h5.027v-1.99H4.116C3.277,15.01,3.124,14.327,3.106,13.952z'/%3E%3C/g%3E%3C/svg%3E%0A");
 }
-.username-block:active > .icon-user{
+.username-block a .icon-user:active{
   background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='utf-8'%3F%3E%3C!-- Generator: Adobe Illustrator 15.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0) --%3E%3C!DOCTYPE svg PUBLIC '-//W3C//DTD SVG 1.1//EN' 'http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd'%3E%3Csvg version='1.1' id='Layer_2' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' width='20px' height='18px' viewBox='0 0 20 18' enable-background='new 0 0 20 18' xml:space='preserve'%3E%3Cpath fill='%23c5c5c5' d='M17.881,14.166c-2.144-0.735-4.256-1.666-5.207-2.39c-0.657-0.501-0.77-1.618-0.517-2.415 c1.118-0.903,1.864-2.477,1.864-4.278C14.021,2.276,12.221,0,10,0S5.979,2.276,5.979,5.083c0,1.801,0.746,3.374,1.863,4.277 c0.253,0.798,0.141,1.915-0.517,2.416c-0.95,0.724-3.063,1.654-5.207,2.39S0,18,0,18h20C20,18,20.025,14.901,17.881,14.166z'/%3E%3C/svg%3E%0A");
 }
-.username-block:active > .icon-logout{
+.username-block a .icon-logout:active{
   background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='utf-8'%3F%3E%3C!-- Generator: Adobe Illustrator 15.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0) --%3E%3C!DOCTYPE svg PUBLIC '-//W3C//DTD SVG 1.1//EN' 'http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd'%3E%3Csvg version='1.1' id='Layer_1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' width='21px' height='17px' viewBox='0 0 21 17' enable-background='new 0 0 21 17' xml:space='preserve'%3E%3Cg%3E%3Cpolygon fill='%23c5c5c5' points='21,8.5 12.125,0 12.125,6 6.125,6 6.125,11 12.125,11 12.125,17 '/%3E%3Cpath fill='%23c5c5c5' d='M3.106,13.952V3.048c0.018-0.376,0.171-1.057,1.01-1.057h5.027V0H4.116C1.938,0,1.112,1.81,1.087,3.027 v10.946C1.112,15.189,1.938,17,4.116,17h5.027v-1.99H4.116C3.277,15.01,3.124,14.327,3.106,13.952z'/%3E%3C/g%3E%3C/svg%3E%0A");
 }
 .username{
@@ -802,6 +803,7 @@ label:active{
   display: block;
   border-radius: 10px;
   position: relative;
+  cursor: pointer;
 }
 .min-price-range{
   left: 20px;
@@ -819,6 +821,7 @@ label:active{
   background-color: #ababab;
   display: block;
   position: relative;
+  cursor: pointer;
 }
 .dott-min-price-range{
   bottom: 52px;
@@ -1352,6 +1355,7 @@ border-radius: 4px;
   padding-left: 23px;
   padding-top: 21px;
   text-transform: capitalize;
+  cursor: pointer;
 }
 .services label:hover{
   background-color: #293449;
